// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with disabled prop 1`] = `
.c0 {
  display: block;
  position: relative;
  width: 100%;
  clear: right;
  float: none;
  margin: 0;
  margin-right: 0px;
  padding: 0;
  padding-right: 2px;
  font-size: 12px;
  line-height: 40px;
  text-align: center;
  color: #767676;
  background: transparent;
}

.c0:hover {
  cursor: not-allowed;
  color: #767676;
  border-color: #D1D1D1;
}

.c0::before {
  content: '';
}

<span
  className="c0"
  disabled={true}
/>
`;

exports[`renders correctly with no props 1`] = `
.c0 {
  display: block;
  position: relative;
  width: 100%;
  clear: right;
  float: none;
  margin: 0;
  margin-right: 0px;
  padding: 0;
  padding-right: 2px;
  font-size: 12px;
  line-height: 40px;
  text-align: center;
  color: #38A9DB;
  background: transparent;
}

.c0:hover {
  cursor: pointer;
  color: #024A8F;
  border-color: #2670AE;
}

.c0::before {
  content: '';
}

<span
  className="c0"
/>
`;
